--- a/flex-direction.html
+++ b/flex-direction.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo-flexbox.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <aside><p>A</p></aside>
-        <aside><p>B</p></aside>        
-        <aside><p>C</p></aside>
+    <header class="conteiner">
+        <aside class="group stylo"><p>A</p></aside>
+        <aside class="group stylo"><p>B</p></aside>        
+        <aside class="group stylo"><p>C</p></aside>
     </header>
     
 </body>
