--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="caixa-foto">
             <img src="img/celular-Redi2.png" alt="">
         </div>
-        <div class="group-sub">group-sub
+        <div class="group-sub">
             <div class="subcaixa1">
                 <img src="img/instagram-logo.png" alt="">
                 <div class="foto-usuario">
